--- a/build.gradle
+++ b/build.gradle
@@ -20,29 +20,35 @@ repositories {
 }
 
 ext {
-    //set('springCloudAzureVersion', "4.0.0")
+    set('springCloudAzureVersion', "4.0.0")
 }
 
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'com.azure.spring:spring-cloud-azure-starter-data-cosmos'
+    implementation 'com.azure.spring:spring-cloud-azure-starter-keyvault-secrets'
 
-    implementation 'com.azure:azure-spring-data-cosmos:3.14.0'
+
+
+    //implementation 'com.azure:azure-spring-data-cosmos:3.14.0'
+
+    //implementation 'com.azure:azure-security-keyvault-secrets:4.2.3'
+    //implementation 'com.azure:azure-identity:1.2.0'
 
     implementation 'org.modelmapper:modelmapper:3.0.0'
-
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
-/*
+
 dependencyManagement {
     imports {
         mavenBom "com.azure.spring:spring-cloud-azure-dependencies:${springCloudAzureVersion}"
     }
 }
-*/
+
 tasks.named('test') {
     useJUnitPlatform()
 }
